update-profile-text

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h1>Everson Rezende</h1>
         <a href="https://www.instagram.com/eversonrz/"> <img src="images/github.svg" alt="Ícone do github"> eversonrezende</a>
         <p>
-          An instructor focused on helping pople start programming for web
+          An student focused on learning the basics on frontend development for web
         </p>
         <ul>
           <li>
