--- a/index.html
+++ b/index.html
@@ -2,14 +2,19 @@
 <!--#Protagonistas-->
 <!--#ImaginarConstruirTransformar-->
 <!--#SemLimites-->
+<!--#BuildTheFuture-->
 
 <!--
   HTML - HyperText Markup Language
     Linguagem de marcação (com Tags) de Hiper Texto (com Links)
 -->
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Everson Rezende - DoWhile 2021</title>
     <link rel="stylesheet" href="style.css" />
 
